@@ -1,3 +1,12 @@
+2019-02-05  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/89090
+	* include/bits/stl_uninitialized.h (__relocate_a_1): Make unused
+	parameter unnamed. Add message to static assertion.
+	* include/bits/vector.tcc (vector::reserve, vector::_M_realloc_insert)
+	(vector::_M_default_append): Use _GLIBCXX17_CONSTEXPR for if constexpr
+	in C++11 code.
+
 2019-02-05  Marc Glisse  <marc.glisse@inria.fr>
 
 	PR libstdc++/87106
